header sticky fix letter spacing

--- a/scss/page-header.scss
+++ b/scss/page-header.scss
@@ -308,6 +308,7 @@
 		.header-menu {
 			text-transform: uppercase;
 			font-size: 13px;
+			letter-spacing: 0.08em;
 			.menu-btn {
 				margin-left: 16px;
 				margin-right: 16px;
